# highway2AI

./: .env.example  .gitignore  README.md  analyzer_agent.py  app.py  enhanced_gif_generator.py  env.example  main.py  pyproject.toml
.cursor/rules/: visealrule.mdc
.docs/: jupyter_primer.md  uv_crash_course.md
data/: communities.csv  communities_to_events.csv  events.csv
examples/: gemini_example.py  load_dataset.py  openrouter_example.py  uaing_jupyter.ipynb
templates/: ai_analysis_dashboard.html  error.html  index.html  results.html  status.html
