[project]
name = "hackathon-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.5.1",
    "google-genai>=1.13.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "openai>=1.77.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
]

[tool.rye.dependencies]
datasets = "*"
pandas = "*"
