[tool.poetry]
name = "e2e-automation-analyzer"
version = "0.1.0"
description = "E2E Automation Analyzer using browser-use for website AI agent testing"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.11,<3.14"
browser-use = "^0.7.0"
python-dotenv = "^1.0.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
pydantic = "^2.5.0"
 jinja2 = "^3.1.0"
python-multipart = "^0.0.9"
pillow = "^11.0.0"
playwright = "^1.55.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100
